[package]
name = "update-pr"
version = "0.1.1"
edition = "2021"

[lib]
test = true

[[bin]]
name = "update-pr"
test = false

[[example]]
name = "simple"
test = true

[dependencies]
clap = { version = "4.5.35", features = ["derive"] }
color-eyre = "0.6.3"
console = "0.15.11"
git2 = "0.20.1"
humantime = "2.2.0"
indicatif = "0.17.11"

[dev-dependencies]
lazy_static = "1.5.0"
tempfile = "3.19.1"
testdir = "0.9.3"
